# seam

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  justfile  package-lock.json  package.json  tsconfig.json  tsconfig.server.json
.beads/: issues.jsonl
.claude/: AGENTS.md  settings.json  team.yaml
.claude-plugin/: plugin.json
agents/: .env.example  README.md
data/: sessions.json
docs/: deployment.md  design-cots-evaluation.md  design-mcp-auth.md  design-plans-system.md  design-project-repos.md  design-requirements-flow.md  design-sandbox-coder.md  experience-design.md  ory-auth-guide.md  plan-agent-observability.md  plan-ephemeral-agents.md  plan-ory-migration.md  plan-scheduler-queue.md  plan-sprint-planning.md  plan-task-provenance.md  product.md  research-knowledge-management.md  seam-howto.md  seam-intro.md  the-complete-story.md
e2e/: accessibility.spec.ts  comparison.spec.ts  exploration.spec.ts  file-loading.spec.ts  session-lifecycle.spec.ts  settings.spec.ts
frontend/: index.html  (+5 more)
server/: Cargo.toml  Dockerfile
server/migrations/: 001_initial.sql  007_questions.sql  008_notes.sql  009_mentions.sql  010_task_dependencies.sql  012_domain_events.sql  013_plans.sql  017_requirements.sql  018_agent_composition.sql  020_tool_invocations.sql  021_task_provenance.sql  024_user_credentials.sql  025_session_tasks.sql  027_knowledge_chunks.sql  033_ssh_key_credential_type.sql  038_invocation_cost_tracking.sql  040_inference_fields.sql  041_request_inference_fields.sql  042_request_duplicate_analysis.sql  044_metrics_snapshots.sql  045_invocations_nullable_workspace.sql  046_automation_created_by.sql
server/src/: auth.rs  code_search.rs  coder.rs  credentials.rs  db.rs  dispatch.rs  embeddings.rs  events.rs  indexer.rs  knowledge.rs  log_buffer.rs  main.rs  mcp.rs  mcp_auth.rs  mcp_handler.rs  models.rs  workspace_token.rs
server/src/routes/: activity.rs  agent.rs  agents.rs  auth_bridge.rs  automations.rs  code_index.rs  credentials.rs  events.rs  hook_bundles.rs  integrations.rs  invocations.rs  metrics.rs  mod.rs  notes.rs  projects.rs  questions.rs  requests.rs  requirements.rs  sessions.rs  tasks.rs  tool_invocations.rs  user_credentials.rs  workspace_logs.rs  workspaces.rs
server/src/worker/: actions.rs  aggregation.rs  bridge.rs  cleanup.rs  mod.rs  reactions.rs  scheduler.rs
server/src/ws/: handler.rs  mod.rs
server/tests/: automations.rs  credentials_schema.rs  domain_events.rs  mcp_events.rs  mentions.rs  orgs.rs  projects.rs  requests.rs  requirements.rs  session_tasks.rs  tasks.rs
(+384 files in other folders)
