[package]
name = "seam-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seam-server"
path = "src/main.rs"

[[bin]]
name = "seam-mcp"
path = "src/mcp.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
futures = "0.3"
dashmap = "6"
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
schemars = "1"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"

[dev-dependencies]
axum-test = "16"
